--- a/index.html
+++ b/index.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Unified Wisdom</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Unified Wisdom Podcast</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #fafafa;
+      color: #222;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #222;
+      color: #fff;
+      padding: 1.5rem 0;
+    }
+    h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    main {
+      padding: 2rem;
+    }
+    iframe {
+      border-radius: 12px;
+      margin-top: 1.5rem;
+    }
+    footer {
+      margin-top: 3rem;
+      padding: 1rem;
+      background: #f0f0f0;
+      font-size: 0.9rem;
+    }
+    a {
+      color: #1db954;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to Unified Wisdom</h1>
-  <p>This is my GitHub Pages site.</p>
+  <header>
+    <h1>Unified Wisdom Podcast</h1>
+    <p>Exploring stories, reflections, and wisdom</p>
+  </header>
+  
+  <main>
+    <h2>🎧 Listen on Spotify</h2>
+    <iframe style="border-radius:12px" 
+      src="https://open.spotify.com/embed/show/0y50fkVMI8NARfZz82LQ13?utm_source=generator" 
+      width="100%" height="232" frameBorder="0" allowfullscreen="" 
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+      loading="lazy"></iframe>
+
+    <h2>📡 Subscribe via RSS</h2>
+    <p><a href="https://mp3wisdom.github.io/unifiedwisdompodcast/rss.xml" target="_blank">RSS Feed</a></p>
+  </main>
+
+  <footer>
+    <p>© 2025 Unified Wisdom | Hosted on <a href="https://github.com/mp3wisdom/unifiedwisdompodcast">GitHub Pages</a></p>
+  </footer>
 </body>
 </html>
